--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,9 @@ classifiers =
     Topic :: Utilities
 
 [options]
+# We use 3.5 which is not supported anymore upstream.
+# Ubuntu 16.04 (LTS) has Python 3.5 and normal support ended just 2021-04-30
+python_requires = >= 3.5
 zip_safe = False
 include_package_data = True
 package_dir=
@@ -34,4 +37,23 @@ where=src
 
 [options.entry_points]
 console_scripts =
-    awslayertool = awlayertool.app:main
+    awslayertool = awslayertool.app:main
+
+[flake8]
+max-line-length = 88
+extend-ignore = E203, W503
+
+[pylint]
+max-line-length = 88
+
+[pylint.messages_control]
+# Black takes care of these:
+disable = bad-continuation, bad-whitespace
+
+[isort]
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+use_parentheses = True
+ensure_newline_before_comments = True
+line_length = 88
