Rename to dtlayertool

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,17 @@
 [metadata]
-name = awslayertool
-version = attr: src.awslayertool.version.__version__
-description = awslayertool is a script to download or clone AWS Lambda Layers or extensions.
+name = dtlayertool
+version = attr: src.dtlayertool.version.__version__
+description = dtlayertool is a script to download or clone AWS Lambda Layers or extensions.
 long_description = file: README.md
+author = Dynatrace, Inc.
+# author_email = TODO
+# url = TODO, Github URL
 license = Apache 2
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Environment :: Console
     License :: OSI Approved :: Apache Software License
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
@@ -19,11 +21,17 @@ classifiers =
     Topic :: System :: Systems Administration
     Topic :: System :: Software Distribution
     Topic :: Utilities
+keywords =
+    aws
+    lambda
+    layer
+    dynatrace
+    oneagent
 
 [options]
-# We use 3.5 which is not supported anymore upstream.
-# Ubuntu 16.04 (LTS) has Python 3.5 and normal support ended just 2021-04-30
-python_requires = >= 3.5
+# 3.5 is not supported anymore upstream or by boto3
+# Ubuntu 16.04 (LTS) had Python 3.5 and normal support ended just 2021-04-30
+python_requires = >= 3.6
 zip_safe = False
 include_package_data = True
 package_dir=
@@ -37,7 +45,7 @@ where=src
 
 [options.entry_points]
 console_scripts =
-    awslayertool = awslayertool.app:main
+    dtlayertool = dtlayertool.app:main
 
 [flake8]
 max-line-length = 88
