--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,10 @@
 name = dtlayertool
 version = attr: src.dtlayertool.version.__version__
 description = dtlayertool is a script to download or clone AWS Lambda Layers or extensions.
-long_description = file: README.md
+long_description = file: README.md, CloneExtensionHowto.md, ContainerizedLambdaHowto.md, LICENSE
+long_description_content_type = text/markdown
 author = Dynatrace, Inc.
-# author_email = TODO
+author_email = opensource@dynatrace.com
 # url = TODO, Github URL
 license = Apache 2
 classifiers =
@@ -26,6 +27,7 @@ keywords =
     lambda
     layer
     dynatrace
+    cli
     oneagent
 
 [options]
@@ -56,7 +58,7 @@ max-line-length = 88
 
 [pylint.messages_control]
 # Black takes care of these:
-disable = bad-continuation, bad-whitespace
+disable = bad-continuation, bad-whitespace, missing-docstring
 
 [isort]
 multi_line_output = 3
