--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,17 @@
+# Copyright 2021 Dynatrace LLC
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 [metadata]
 name = dtlayertool
 version = attr: src.dtlayertool.version.__version__
@@ -8,6 +22,7 @@ author = Dynatrace, Inc.
 author_email = opensource@dynatrace.com
 # url = TODO, Github URL
 license = Apache 2
+license_files = LICENSE
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Environment :: Console
