--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -28,8 +28,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade setuptools wheel
-        python -m pip install --upgrade flake8 pytest black isort pylint twine
+        python -m pip install --upgrade -r dev-requirements.txt
         python -m pip install --upgrade --editable .
     - name: Check
       run: |
-        python scripts/check.py
+        scripts/check.py --check
