Rename to dt-awslayertool.

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,9 +13,9 @@
 # limitations under the License.
 
 [metadata]
-name = dtlayertool
-version = attr: src.dtlayertool.version.__version__
-description = dtlayertool is a script to download or clone AWS Lambda Layers or extensions.
+name = dt-awslayertool
+version = attr: src.dtawslayertool.version.__version__
+description = dt-awslayertool is a script to download or clone AWS Lambda Layers or extensions.
 long_description = file: README.md, CloneExtensionHowto.md, ContainerizedLambdaHowto.md, LICENSE
 long_description_content_type = text/markdown
 author = Dynatrace, Inc.
@@ -62,7 +62,7 @@ where=src
 
 [options.entry_points]
 console_scripts =
-    dtlayertool = dtlayertool.app:main
+    dt-awslayertool = dtawslayertool.app:main
 
 [flake8]
 max-line-length = 115
