--- a/setup.cfg
+++ b/setup.cfg
@@ -24,8 +24,9 @@ author_email = opensource@dynatrace.com
 license = Apache 2
 license_files = LICENSE
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 5 - Production/Stable
     Environment :: Console
+    License :: OSI Approved
     License :: OSI Approved :: Apache Software License
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
