Set URL in setup.cfg.

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ long_description = file: README.md, CloneExtensionHowto.md, ContainerizedLambdaH
 long_description_content_type = text/markdown
 author = Dynatrace, Inc.
 author_email = opensource@dynatrace.com
-# url = TODO, Github URL
+url = https://github.com/dynatrace-oss/dt-awslayerool/
 license = Apache 2
 license_files = LICENSE
 classifiers =
